<resources>
    <string name="app_name" translatable="false">On Click</string>
    <string name="app_version">V%s</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="error_api_500">Server Error, Please try again later</string>
    <string name="error_api_general">Something Error, Please try again later</string>
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_not_valid_email">Please enter a valid email</string>
    <string name="homepage">HomePage</string>
    <string name="favorite">Favorite</string>
    <string name="account">Account</string>
    <string name="reports">Reports</string>
    <string name="transactions">Transactions</string>
    <string name="settings">Settings</string>
    <string name="cart">Cart</string>
    <string name="data_recharge_main">Data Recharge</string>
    <string name="receipt">Receipt</string>
    <string name="date">Date</string>
    <string name="id">ID</string>
    <string name="details">Details</string>
    <string name="statues">Statues</string>
    <string name="ott_cinema">OTT Cinema</string>
    <string name="voice_recharge">Voice Recharge</string>
    <string name="quantity">Quantity</string>
    <string name="card_details">Card Details</string>
    <string name="credit_card">Credit Card</string>
    <string name="payment_account">Payment Account</string>
    <string name="main_category">Main Category</string>
    <string name="product_name">Product Name</string>
    <string name="transactions_id">Transactions ID/</string>
    <string name="cash_receipt">Cash Receipt</string>
    <string name="shop_name">Shop Name</string>
    <string name="thank_you">Thank You!</string>
    <string name="address">Address</string>
    <string name="tel">Tel</string>
    <string name="manager">Manager</string>
    <string name="lorem">Lorem</string>
    <string name="consectetuer">Consectetuer</string>
    <string name="amet">Amet</string>
    <string name="price">Price</string>
    <string name="vat">VAT</string>
    <string name="sale">Sale</string>
    <string name="total">Total</string>
    <string name="bakala_address">Bakala Address</string>
    <string name="view_on_map">View On Map</string>
    <string name="device_theme">Device Theme</string>
    <string name="device_language">Device Language</string>
    <string name="device_order_print">Device Order Print</string>
    <string name="transactions_statement">Transactions Statement</string>
    <string name="e_wallet_balance">E-Wallet Balance</string>
    <string name="pos_id">POS ID</string>
    <string name="name_pos_user">Name / Pos User</string>
    <string name="bakala_name">Bakala Name</string>
    <string name="email">Email</string>
    <string name="gift_card">Gift Card /</string>
    <string name="game_card">Game Card /</string>
    <string name="game_cards_main">Game Cards</string>
    <string name="gift_cards_main">Gift Cards</string>
    <string name="data_recharge_">Data Recharge /</string>
    <string name="cinema_card">Cinema Card /</string>
    <string name="cinema_cards_main">Cinema Cards</string>
    <string name="total_to_pay">Total To Pay =</string>
    <string name="checkout">CheckOut</string>
    <string name="amount">Amount</string>
    <string name="all_receipts">All Receipts</string>
    <string name="final_receipt">Final Receipt</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="voucher_receipt">Voucher Receipt..</string>
    <string name="card_num">Card Num</string>
    <string name="terminal_num">Terminal Num</string>
    <string name="serial">Serial.</string>
    <string name="user_instruction">User Instruction</string>
    <string name="static_user_info">AIG Pharmaceuticals is a growing Pharmaceutical company that was established in 2010 with its headquarters located in Cairo and Delta with the objective of providing high quality and innovative products to the Egyptian market .In 2011, after 9 years of operations, AIG has grown from a small local company to a market leader of approximately 500 customers.</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="category_title0">Data Recharge</string>
    <string name="category_paragraph_0">mobily - zain - Lebara - Virgin - FRIENDI - stc</string>
    <string name="category_title1">Voice Recharge</string>
    <string name="category_paragraph_1">Mobily - Zain - Lebara - Virgin - FRIENDI - Stc - GO</string>
    <string name="category_title2">Games Cards</string>
    <string name="category_paragraph_2">Nintendo - Xbox - PUBG - FIFA - VIP Jalsat - Mobile Legends..</string>
    <string name="category_title3">(OTT) Cinema</string>
    <string name="category_paragraph_3">STARZPLAY - Netflix - Kitab Sawti - Weyyka - Shaid Vip/</string>
    <string name="category_title4">Gift Cards</string>
    <string name="category_paragraph_4">Skype - Microsoft - Mcafee - Facebook</string>
    <string name="category_title5">Favorites</string>
    <string name="category_paragraph_5">Long Press On Any Card to Add/Remove Form Your Favorites</string>
    <string name="s1s0">stc</string>
    <string name="s1s1">mobily</string>
    <string name="s1s2">Virgin</string>
    <string name="s1s3">zain</string>
    <string name="s1s4">FRIENDI</string>
    <string name="s1s5">Lebara</string>
    <string name="s2s0">stc</string>
    <string name="s2s1">mobily</string>
    <string name="s2s2">Virgin</string>
    <string name="s2s3">zain</string>
    <string name="s2s4">FRIENDI</string>
    <string name="s2s5">Lebara</string>
    <string name="s3s0">Xbox</string>
    <string name="s3s1">Nintendo</string>
    <string name="s3s2">PUBG</string>
    <string name="s3s3">Playstation</string>
    <string name="s3s4">Fifa</string>
    <string name="s3s5">Lords</string>
    <string name="s3s6">Mobile Legends</string>
    <string name="s3s7">Free Fire</string>
    <string name="s3s8">Vip Boloot</string>
    <string name="s3s9">Steam</string>
    <string name="s3s10">Vip Jalsaat</string>
    <string name="s4s0">Netflix</string>
    <string name="s4s1">Starz Play</string>
    <string name="s4s2">Shahid Vip</string>
    <string name="s4s3">Weyyak</string>
    <string name="s4s4">kitaab sawti</string>
    <string name="s5s0">Careem</string>
    <string name="s5s1">Amazon</string>
    <string name="s5s2">FaceBook</string>
    <string name="s5s3">Ebay</string>
    <string name="s5s4">I Tunes</string>
    <string name="s5s5">Google Play</string>
    <string name="s5s6">Marsool</string>
    <string name="s5s7">MCafe</string>
    <string name="s5s8">MicroSoft Office</string>
    <string name="s5s9">Noon</string>
    <string name="s5s10">Skype</string>
    <string name="s5s11">Razer</string>
    <string name="s5s12">Microsoft Windows</string>
    <string name="s5s13">Tmmmt</string>
    <string name="mobilyname1">Recharge Card</string>
    <string name="mobilyprice1">20</string>
    <string name="mobilydescr1">Mobily Recharge Card 20 SAR</string>
    <string name="mobilyname2">Recharge Card</string>
    <string name="mobilyprice2">25</string>
    <string name="mobilydescr2">Mobily Recharge Card 25 SAR</string>
    <string name="mobilyname3">Recharge Card</string>
    <string name="mobilyprice3">35</string>
    <string name="mobilydescr3">Mobily Recharge Card 35 SAR</string>
    <string name="mobilyname4">Recharge Card</string>
    <string name="mobilyprice4">58</string>
    <string name="mobilydescr4">Mobily Recharge Card 58 SAR</string>
    <string name="mobilyname5">Recharge Card</string>
    <string name="mobilyprice5">115</string>
    <string name="mobilydescr5">Mobily Recharge Card 115 SAR</string>
    <string name="mobilyname6">Recharge Card</string>
    <string name="mobilyprice6">230</string>
    <string name="mobilydescr6">Mobily Recharge Card 230 SAR</string>
    <string name="mobilyname7">Recharge Card</string>
    <string name="mobilyprice7">395</string>
    <string name="mobilydescr7">Mobily Recharge Card 395 SAR</string>
    <string name="mobilyDataname1">5 GB Month</string>
    <string name="mobilyDataprice1">90</string>
    <string name="mobilyDatadescr1">Mobily Data Card 90 SAR</string>
    <string name="mobilyDataname2">10 GB Month</string>
    <string name="mobilyDataprice2">110</string>
    <string name="mobilyDatadescr2">Mobily Data Card 110 SAR</string>
    <string name="mobilyDataname3">10 GB 3 Months</string>
    <string name="mobilyDataprice3">200</string>
    <string name="mobilyDatadescr3">Mobily Data Card 200 SAR</string>
    <string name="mobilyDataname4">20 GB 3 Months</string>
    <string name="mobilyDataprice4">240</string>
    <string name="mobilyDatadescr4">Mobily Data Card 240 SAR</string>
    <string name="stcname1">Recharge Card</string>
    <string name="stcprice1">20</string>
    <string name="stcdescr1">STC Recharge Card 20 SAR</string>
    <string name="stcname2">Recharge Card</string>
    <string name="stcprice2">25</string>
    <string name="stcdescr2">STC Recharge Card 25 SAR</string>
    <string name="stcname3">Recharge Card</string>
    <string name="stcprice3">35</string>
    <string name="stcdescr3">STC Recharge Card 35 SAR</string>
    <string name="stcname4">Recharge Card</string>
    <string name="stcprice4">58</string>
    <string name="stcdescr4">STC Recharge Card 58 SAR</string>
    <string name="stcname5">Recharge Card</string>
    <string name="stcprice5">115</string>
    <string name="stcdescr5">STC Recharge Card 115 SAR</string>
    <string name="stcname6">Recharge Card</string>
    <string name="stcprice6">230</string>
    <string name="stcdescr6">STC Recharge Card 230 SAR</string>
    <string name="stcname7">Recharge Card</string>
    <string name="stcprice7">395</string>
    <string name="stcdescr7">STC Recharge Card 395 SAR</string>
    <string name="stcDataname1">5 GB Month</string>
    <string name="stcDataprice1">90</string>
    <string name="stcDatadescr1">STC Data Card 90 SAR</string>
    <string name="stcDataname2">10 GB Month</string>
    <string name="stcDataprice2">110</string>
    <string name="stcDatadescr2">STC Data Card 110 SAR</string>
    <string name="stcDataname3">10 GB 3 Months</string>
    <string name="stcDataprice3">200</string>
    <string name="stcDatadescr3">STC Data Card 200 SAR</string>
    <string name="stcDataname4">20 GB 3 Months</string>
    <string name="stcDataprice4">240</string>
    <string name="stcDatadescr4">STC Data Card 240 SAR</string>
    <string name="zainname1">Recharge Card</string>
    <string name="zainprice1">20</string>
    <string name="zaindescr1">Zain Recharge Card 20 SAR</string>
    <string name="zainname2">Recharge Card</string>
    <string name="zainprice2">25</string>
    <string name="zaindescr2">Zain Recharge Card 25 SAR</string>
    <string name="zainname3">Recharge Card</string>
    <string name="zainprice3">35</string>
    <string name="zaindescr3">Zain Recharge Card 35 SAR</string>
    <string name="zainname4">Recharge Card</string>
    <string name="zainprice4">58</string>
    <string name="zaindescr4">Zain Recharge Card 58 SAR</string>
    <string name="zainname5">Recharge Card</string>
    <string name="zainprice5">115</string>
    <string name="zaindescr5">Zain Recharge Card 115 SAR</string>
    <string name="zainname6">Recharge Card</string>
    <string name="zainprice6">230</string>
    <string name="zaindescr6">Zain Recharge Card 230 SAR</string>
    <string name="zainname7">Recharge Card</string>
    <string name="zainprice7">395</string>
    <string name="zaindescr7">Zain Recharge Card 395 SAR</string>
    <string name="zainDataname1">5 GB Month</string>
    <string name="zainDataprice1">90</string>
    <string name="zainDatadescr1">Zain Data Card 90 SAR</string>
    <string name="zainDataname2">10 GB Month</string>
</resources>