<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/searchPagerFragment"
            android:icon="@drawable/ic_homepage"
            android:title="@string/homepage"/>
        <item
            android:id="@+id/favouritesFragment"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"/>
        <item
            android:id="@+id/accountFragmnet"
            android:icon="@drawable/ic_profile"
            android:title= "@string/account"/>
        <item
            android:id="@+id/reportsFragment"
            android:icon="@drawable/ic_reports"
            android:title="@string/reports"/>
        <item
            android:id="@+id/fragmentTransactionsTables"
            android:icon="@drawable/ic_transactions"
            android:title="@string/transactions"/>
        <item
            android:id="@+id/settingFragment2"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/cartFragment"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/cart"/>
    </group>
</menu>