<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3DbEb"
    android:orientation="vertical"
    tools:context="com.gama.task.ui.fragments.drawrmenu.ReportsFragment"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="@dimen/_18sdp"
    android:textStyle="bold"
    android:text="@string/reports"
    android:textColor="@android:color/black"
    android:layout_margin="@dimen/_18sdp"
    />
   <TextView
       android:id="@+id/device_order_print"
       android:layout_marginRight="@dimen/_20sdp"
       android:layout_marginLeft="@dimen/_20sdp"
       android:layout_marginTop="@dimen/_20sdp"
       android:layout_width="match_parent"
       android:text="@string/device_order_print"
       android:textStyle="bold"
       android:textSize="@dimen/_18sdp"
       android:textAlignment="center"
       android:gravity="center"
       android:layout_height="@dimen/_100sdp"
       android:background="@drawable/button_main"
       />
    <TextView
        android:id="@+id/transaction_statement"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:textAlignment="center"
        android:gravity="center"
        android:text="@string/transactions_statement"
        android:textStyle="bold"
        android:textSize="@dimen/_17sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:background="@drawable/button_main"
    />
</LinearLayout>
