<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#D7E2E9F1"
    tools:context="com.gama.task.ui.fragments.sidemenu.SettingFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_20sdp"
        android:text="@string/settings"
        android:textSize="@dimen/_20sdp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_10sdp"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:src="@drawable/line_h"

        android:layout_marginTop="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/account_back"
        android:layout_margin="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/bakala_address" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:text="Ryadh abc abc bnacbbacbcbcbcbcbcbcbcbcbcbc"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="right"

            android:layout_margin="@dimen/_10sdp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bakala Address"
                android:layout_gravity="center"
                android:src="@drawable/ic_baseline_border_color_24"


               />
            <TextView
                android:id="@+id/map"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:lines="1"
                android:text="@string/view_on_map"
                android:gravity="center"


                android:background="@drawable/account_back"
                android:textColor="#A7BBD0"
                />
        </LinearLayout>


    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:src="@drawable/line_h"

        android:layout_marginTop="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="@dimen/_80sdp"
        android:orientation="vertical"
        android:background="@drawable/account_back"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_theme"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_ligh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@android:color/holo_red_dark"
                />
            <RadioButton
                android:id="@+id/radio_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:layout_marginLeft="@dimen/_30sdp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                />
        </RadioGroup>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:src="@drawable/line_h"

        android:layout_marginTop="@dimen/_10sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="@dimen/_80sdp"
        android:orientation="vertical"
        android:background="@drawable/account_back"
        android:layout_margin="@dimen/_10sdp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_language"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_10sdp"/>

        <RadioGroup
            android:id="@+id/language_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radio_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arabic"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@android:color/holo_red_dark"
                />
            <RadioButton
                android:id="@+id/radio_english"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="English"
                android:layout_marginLeft="@dimen/_30sdp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                />
            <RadioButton
                android:id="@+id/radio_urdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Urdo"
                android:layout_marginLeft="@dimen/_30sdp"
                android:textStyle="bold"
                android:textColor="@android:color/holo_red_dark"
                />
        </RadioGroup>
    </LinearLayout>

</LinearLayout>