<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="com.gama.task.ui.fragments.drawrmenu.orderprinttable.FragmentOrderPrint"
    >

    <LinearLayout


       android:background="@drawable/btn_rounded_grey"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/id">

            </TextView>

            <View
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_v"></View>
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/date">

            </TextView>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_v"></View>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:text="@string/amount">

            </TextView>

            <View
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:background="@drawable/line_v"></View>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"

                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="@dimen/_9sdp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/receipt"/>



        </LinearLayout>

        </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/rv_menu_receipt"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        android:backgroundTint="#fafafa"
        android:background="#fafafa"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="5dp"
        android:clipToPadding="false"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/table_receipt_item"
       />
</LinearLayout>
